[package]
name = "lunula"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcb = {version="1.1.1", features = ["xkb", "xfixes", "xinput"]}
expanduser = "*"
log = "0.4.17"
simple-logging = "^2.0.2"
log-panics = "*"
